Updated langauge files as of this date/time
Former-commit-id: c539208dbf67ba60ae06dbc0487cfe5f0f5bb6d2

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -255,7 +255,7 @@
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP / منفذات مسموحة التعدين إليها. منفصل ب<b>;</b> . أحرف البدل معتمدة فقط في IP",
   "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
   "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
-  "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
+  "If you need to switch back to Legacy Mode, you can select %{menu}\" menu option at any time.\"": null,
   "Ignore": "تجاهل",
   "Immature": "غير ناضج",
   "Immature Balance": "رصيد غير ناضج",
