--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -1,47 +1,47 @@
 {
-  " (Owned by you)": null,
+  " (Owned by you)": " (Sinun omistamasi)",
   "%{name}'s Address": "%{name}'s Osoite",
   "%{name}'s Nexus address": "%{name}'s Nexus osoite",
   "%{smart_count} address |||| %{smart_count} addresses": "-> %{smart_count} osoite |||| %{smart_count} osoitteet",
-  "%{tokenName} Amount": null,
+  "%{tokenName} Amount": "%{tokenName} Määrä",
   "(This will restart your Core)": "(Tämä uudelleenkäynnistää ytimen)",
   "24hr Change": "24h Muutos",
   "A contact with the same name already exists.": "Samanniminen yhteystieto on jo olemassa.",
-  "A globally unique username": null,
+  "A globally unique username": "Globaalisti uniikki käyttäjänimi",
   "A module with the same directory name already exists": "Samanniminen kansio jo jollain moduulilla käytössä",
   "ACCOUNT": "TILI",
   "ADDRESS": "OSOITE",
   "AMOUNT": "MÄÄRÄ",
-  "API Documentation": null,
+  "API Documentation": "API-dokumentaatio",
   "Abort": "Keskeytä",
   "About": "Tietoa",
   "Account": "Tili",
-  "Account Details": null,
-  "Account History": null,
-  "Account balance": null,
+  "Account Details": "Tilin tiedot",
+  "Account History": "Tilin historia",
+  "Account balance": "Tilin saldo",
   "Account name": "Tilin nimi",
-  "Account name (%{nameFee} NXS Fee) (Optional)": null,
+  "Account name (%{nameFee} NXS Fee) (Optional)": "Tilin nimi(%{nameFee} NXS Fee) (Vaihtoehtoinen)",
   "Account name is required": "Tilin nimi vaaditaan",
-  "Account/token address": null,
-  "Accounts": null,
+  "Account/token address": "Tili/Token osoite",
+  "Accounts": "Tilit",
   "Add Module": "Lisää Moduuli",
-  "Add Name": null,
+  "Add Name": "Lisää nimi",
   "Add recipient": "Lisää vastaanottaja",
-  "Adding a name costs a NXS fee": null,
+  "Adding a name costs a NXS fee": "Nimen lisäämisellä on NXS taksa",
   "Address": "Osoite",
   "Address Book": "Osoitekirja",
   "Address book": "Osoitekirja",
   "Address cannot be empty": "Osoite ei voi olla tyhjä",
   "Address has been copied to clipboard": "Osoite on kopioitu leikepöydälle",
   "Address is required": "Osoite vaaditaan",
-  "Address/Name is required": null,
-  "Adjust stake amount": null,
+  "Address/Name is required": "Osoite/Nimi vaaditaan",
+  "Adjust stake amount": "Muuta panostuksen määrää",
   "All": "Kaikki",
   "All Accounts": "Kaikki tilit",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": "Kaikki moduulit, joilla ei ole avoimen lähdekoodin verifikaatioita, mahdollisesti omassa kehityksessä olevat moduulit muuttuvat kelvottomiksi. Lompakko täytyy ladata uudelleen, jotta muutos tulee voimaan.",
-  "Allow SymLink": null,
-  "Allow the presence of SymLinks in the module directory": null,
-  "Alpha Test Net to connect to.": null,
+  "Allow SymLink": "Salli symboliset linkit",
+  "Allow the presence of SymLinks in the module directory": "Salli symbolisten linkkien (SymLinks) olemassaolo moduuli hakemistossa",
+  "Alpha Test Net to connect to.": "Alpha test net johon yhdistää.",
   "Amount": "Määrä",
   "Amount of significant digits a token can have": null,
   "An optional number which may be provided by the recipient to identify this transaction from the others": null,
@@ -255,7 +255,7 @@
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Portit joiden sallitaan louhivan. Erottele <b>;</b>. Villikortit sallittuja vain IP:ssä",
   "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
   "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
-  "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
+  "If you need to switch back to Legacy Mode, you can select %{menu}\" menu option at any time.\"": null,
   "Ignore": "Ohita",
   "Immature": "Kypsymätön",
   "Immature Balance": "Kypsymätön tase",
