--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -59,7 +59,7 @@
   "Available": null,
   "Available balance": null,
   "Avatar Mode": "Mode Avatar",
-  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": "SAUVEGARDEZ VOTRE PORTEFEUILLE RÉGULIÈREMENT ET CONSERVEZ VOS MOTS DE PASSE EN LIEU SÛR.",
   "Background": "Arrière-plan",
   "Background Color": "Couleur d'arrière plan",
   "Backing up your wallet...": "Sauvegarde de votre portefeuille...",
@@ -68,7 +68,7 @@
   "Backup directory": "Répertoire de sauvegarde",
   "Backup wallet": "Sauvegarder le portefeuille",
   "Balance": "Solde",
-  "Base currency": null,
+  "Base currency": "Devise de référence",
   "Block Count": "Nombre de blocs",
   "Block Weight": "Block Weight",
   "Block Weight depends on the time passed since you received a Trust transaction and will be reset everytime you receive a Trust transaction. Otherwise, Block Weight will reach 100% after 3 days and your Trust Score will start decaying until you receive another Trust transaction": null,
@@ -255,7 +255,7 @@
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Ports autorisés à miner. Séparez-les par <b>;</b> . Métacaractères supportés uniquement en IP",
   "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
   "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
-  "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
+  "If you need to switch back to Legacy Mode, you can select %{menu}\" menu option at any time.\"": null,
   "Ignore": "Ignorer",
   "Immature": "Immature",
   "Immature Balance": "Solde immature",
@@ -344,7 +344,7 @@
   "My Addresses": "Mes adresses",
   "My Nexus address": "Mon adresse Nexus",
   "My Nexus address for %{name}": "Mon adresse Nexus pour %{name}",
-  "My address for %{name}": null,
+  "My address for %{name}": "Mon adresse pour %{name}",
   "NXS Amount": "Montant NXS",
   "NXS addresses": "Adresses NXS",
   "NXS balances": null,
@@ -461,8 +461,8 @@
   "Reference number": null,
   "Refresh": "Rafraîchir les données du marché",
   "Refreshing market data...": "Rafraîchissement des données du marché...",
-  "Reload": null,
-  "Reload transaction history": null,
+  "Reload": "Recharger",
+  "Reload transaction history": "Recharger l'historique des transactions",
   "Remove address": "Enlever adresse",
   "Remove recipient": "Retirer le destinataire",
   "Render globe": "Afficher le globe",
@@ -476,7 +476,7 @@
   "Reset": "Réinitialiser",
   "Restart Core for these changes to take effect": null,
   "Restart Core?": "Redémarrer le noyau ?",
-  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": "Redémarrez le noyau Nexus avec le paramètre -walletclean pour nettoyer et recharger l'historique des transactions",
   "Restarting Core...": "Redémarrage du noyau...",
   "Restarting Nexus Core...": "Redémarrage du daemon...",
   "Sample Address": "Exemple d'adresse",
@@ -485,7 +485,7 @@
   "Search Tokens": null,
   "Search address": "Rechercher une adresse",
   "Search contact": "Chercher un contact",
-  "Search for Address": null,
+  "Search for Address": "Rechercher une adresse",
   "Search for Token on the network ( Name or Address)": null,
   "Search for token": null,
   "Security": "Sécurité",
@@ -608,7 +608,7 @@
   "Unconfirmed": null,
   "Unconfirmed balance": null,
   "Unknown": "Inconnu",
-  "Unknown error": null,
+  "Unknown error": "Erreur inconnue",
   "Unknown login status": "Statut de connexion inconnu",
   "Unnamed account": null,
   "Unnamed token": null,
