--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -1,135 +1,135 @@
 {
   " (Owned by you)": null,
-  "%{name}'s Address": null,
-  "%{name}'s Nexus address": null,
-  "%{smart_count} address |||| %{smart_count} addresses": null,
+  "%{name}'s Address": "%{name}'s Adres",
+  "%{name}'s Nexus address": "%{name}'s Nexus adres",
+  "%{smart_count} address |||| %{smart_count} addresses": "%{smart_count} adres |||| %{smart_count} adressen",
   "%{tokenName} Amount": null,
-  "(This will restart your Core)": null,
+  "(This will restart your Core)": "(Dit zal de back-end herstarten)",
   "24hr Change": "24hr verandering",
-  "A contact with the same name already exists.": null,
+  "A contact with the same name already exists.": "Er bestaat reeds een contract met dezelfde naam.",
   "A globally unique username": null,
-  "A module with the same directory name already exists": null,
-  "ACCOUNT": null,
+  "A module with the same directory name already exists": "Er bestaat reeds een module met dezelfde folder naam",
+  "ACCOUNT": "REKENING",
   "ADDRESS": "ADRES",
   "AMOUNT": "BEDRAG",
   "API Documentation": null,
-  "Abort": null,
-  "About": null,
-  "Account": null,
+  "Abort": "Annuleren",
+  "About": "Over",
+  "Account": "Rekening",
   "Account Details": null,
   "Account History": null,
   "Account balance": null,
   "Account name": "Account Naam",
   "Account name (%{nameFee} NXS Fee) (Optional)": null,
-  "Account name is required": null,
+  "Account name is required": "Rekeningnaam is vereist",
   "Account/token address": null,
   "Accounts": null,
-  "Add Module": null,
+  "Add Module": "Module toevoegen",
   "Add Name": null,
   "Add recipient": "Voeg ontvanger toe",
   "Adding a name costs a NXS fee": null,
   "Address": "Adres",
-  "Address Book": null,
+  "Address Book": "Adresboek",
   "Address book": "Adresboek",
-  "Address cannot be empty": null,
-  "Address has been copied to clipboard": null,
-  "Address is required": null,
+  "Address cannot be empty": "Adres mag niet leeg zijn",
+  "Address has been copied to clipboard": "Adres is gekopieerd naar het klembord",
+  "Address is required": "Adres is verplicht",
   "Address/Name is required": null,
   "Adjust stake amount": null,
   "All": "Alle",
   "All Accounts": "Alle Accounts",
-  "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
+  "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": "Alle modules zonder open source verificaties, mogelijk inclusief uw eigen onder ontwikkeling modules, zullen ongeldig worden. Wallet moet vernieuwd worden om de verandering in werking te laten treden.",
   "Allow SymLink": null,
   "Allow the presence of SymLinks in the module directory": null,
   "Alpha Test Net to connect to.": null,
   "Amount": "Hoeveelheid",
   "Amount of significant digits a token can have": null,
   "An optional number which may be provided by the recipient to identify this transaction from the others": null,
-  "An unknown error occurred": null,
+  "An unknown error occurred": "Onbekende fout opgetreden",
   "Application": "Applicatie",
-  "Are you sure you want to abort the process?": null,
+  "Are you sure you want to abort the process?": "Weet u zeker dat u dit proces wilt afbreken?",
   "Are you sure you want to disable auto update?": "Weet u zeker dat u Auto Update wilt uitschakelen?",
-  "Are you sure you want to log out?": null,
+  "Are you sure you want to log out?": "Weet u zeker dat u wil uitloggen?",
   "Are you sure you want to switch to Legacy Mode?": null,
   "Attention": null,
-  "Author": null,
-  "Auto Update is not yet available on Mac, please update the wallet manually for the time being": null,
+  "Author": "Auteur",
+  "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Auto Update is nog niet beschikbaar op Mac, update de wallet handmatig voor het moment",
   "Auto update (Recommended)": "Auto Update (Aanbevolen)",
-  "Automatically check for new versions and notify if a new version is available.": null,
+  "Automatically check for new versions and notify if a new version is available.": "Automatisch controleren op nieuwe versies en melden als er een nieuwe versie beschikbaar is.",
   "Available": null,
   "Available balance": null,
-  "Avatar Mode": null,
-  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
-  "Background": null,
+  "Avatar Mode": "Avatar Modus",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": "Maak bij regelmaakt een backup en hou uw wachtwoord veilig.",
+  "Background": "Achtergrond",
   "Background Color": "Paneel Achtergrond Kleur",
-  "Backing up your wallet...": null,
-  "Backing up...": null,
-  "Backup Wallet": null,
-  "Backup directory": null,
+  "Backing up your wallet...": "Backup aan het maken van uw wallet...",
+  "Backing up...": "Backup maken...",
+  "Backup Wallet": "Backup Wallet",
+  "Backup directory": "Backup folder",
   "Backup wallet": "Backup portemonnee",
   "Balance": "Balans",
-  "Base currency": null,
+  "Base currency": "Basisvaluta",
   "Block Count": "Block Totaal",
   "Block Weight": "Block Gewicht",
   "Block Weight depends on the time passed since you received a Trust transaction and will be reset everytime you receive a Trust transaction. Otherwise, Block Weight will reach 100% after 3 days and your Trust Score will start decaying until you receive another Trust transaction": null,
-  "Block hash": null,
-  "Bootstrap Recent Database": null,
-  "Bootstrap process has been aborted": null,
+  "Block hash": "Blok hash",
+  "Bootstrap Recent Database": "Recente database downloaden",
+  "Bootstrap process has been aborted": "Recente database downloaden is afgebroken",
   "Browse": "Blader",
   "CATEGORY": "CATEGORIE",
   "Can not find Token": null,
   "Cancel": "Annuleren",
-  "Cannot bootstrap recent database in manual mode": null,
-  "Cannot find module": null,
-  "Cannot install from that location": null,
+  "Cannot bootstrap recent database in manual mode": "Kan recente database niet initialiseren in handmatige modus",
+  "Cannot find module": "Kan module niet vinden",
+  "Cannot install from that location": "Kan niet installeren vanaf die locatie",
   "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
-  "Cannot move to the same account": null,
-  "Category": null,
+  "Cannot move to the same account": "Kan niet naar hetzelfde account verplaatsen",
+  "Category": "Categorie",
   "Change": null,
   "Change password": "Wachtwoord Veranderen",
-  "Check for Updates...": null,
-  "Check wallet": null,
-  "Check wallet failed": null,
-  "Check wallet pass": null,
-  "Check wallet's integrity": null,
-  "Checking for Updates...": null,
-  "Checking module": null,
-  "Checking sync status": null,
-  "Choose your Nexus Address display preference": null,
+  "Check for Updates...": "Controleren op updates...",
+  "Check wallet": "Controleer wallet",
+  "Check wallet failed": "Controle wallet mislukt",
+  "Check wallet pass": "Controle wallet gelukt",
+  "Check wallet's integrity": "Controleer wallet integriteit",
+  "Checking for Updates...": "Controleren op updates...",
+  "Checking module": "Controleren van module",
+  "Checking sync status": "Sync status controleren",
+  "Choose your Nexus Address display preference": "Kies uw Nexus Adres weergave voorkeur",
   "Clear": null,
   "Clear all stored peer connections and restart Nexus": null,
   "Clear console": "Console leegmaken",
   "Clear peer connections": null,
-  "Click to copy to clipboard": null,
+  "Click to copy to clipboard": "Klik om naar klembord te kopiëren",
   "Close": "Gesloten",
-  "Close and install": null,
-  "Close the wallet and install update now?": null,
+  "Close and install": "Sluiten en installeren",
+  "Close the wallet and install update now?": "Sluit de wallet en installeer update nu?",
   "Closing Nexus Wallet": "Sluiten van Nexus",
   "Coinbase transaction": null,
-  "Color scheme": null,
-  "Color scheme has been reset to default": null,
-  "Confirm": null,
+  "Color scheme": "Kleurenthema",
+  "Color scheme has been reset to default": "Kleurenschema is terug naar standaard gezet",
+  "Confirm": "Bevestig",
   "Confirm PIN": null,
   "Confirm password": "Bevestig Wachtwoord",
   "Confirmations": "Bevestigingen",
   "Connecting to Nexus Core": "Portemonnee laden, een ogenblik geduld",
-  "Connecting to Nexus Core...": null,
+  "Connecting to Nexus Core...": "Verbinding maken met Nexus Core...",
   "Connections": "Verbindingen",
-  "Console": null,
-  "Contact has been updated": null,
-  "Contact info": null,
-  "Contact name": null,
+  "Console": "Console",
+  "Contact has been updated": "Contact is bijgewerkt",
+  "Contact info": "Contact Info",
+  "Contact name": "Contact naam",
   "Continue to Tritium Mode": null,
   "Contract Details": null,
   "Copied to clipboard": "Gekopieerd naar het klembord",
   "Copy": "Copiëren",
-  "Copy to clipboard": null,
+  "Copy to clipboard": "Kopieer naar klembord",
   "Core": "Kern",
   "Core build date": null,
-  "Core is in Manual Mode": null,
+  "Core is in Manual Mode": "Back-end is in handmatige modus",
   "Core output": "Basis Output",
   "Core settings saved": "Basis Instellingen Opgeslagen",
-  "Cosmic light": null,
+  "Cosmic light": "Cosmic light",
   "Create": "Aanmaken",
   "Create a account without a name?": null,
   "Create a token without a name?": null,
@@ -137,7 +137,7 @@
   "Create new account": null,
   "Create new account with this token": null,
   "Create new address": "Nieuw Adres aanmaken",
-  "Create new contact": null,
+  "Create new contact": "Nieuw contact maken",
   "Create new token": null,
   "Create new user": null,
   "Create token": null,
@@ -146,49 +146,49 @@
   "Creating account": null,
   "Creating user": null,
   "Current Supply": null,
-  "Custom": null,
-  "Custom wallpaper": null,
-  "Customize your background wallpaper": null,
-  "Cut": null,
-  "Danger Color": null,
-  "Danger Color Accent": null,
-  "Dark": null,
+  "Custom": "Aangepast",
+  "Custom wallpaper": "Aangepaste achtergrond",
+  "Customize your background wallpaper": "Uw achtergrond aanpassen",
+  "Cut": "Knippen",
+  "Danger Color": "Gevaarkleur",
+  "Danger Color Accent": "Gevaar Kleur Accent",
+  "Dark": "Donker",
   "Data directory configured for manual Core.": "Data folder geconfigureerd voor handmatige daemon.",
-  "Data directory is required": null,
+  "Data directory is required": "Gegevens folder is vereist",
   "Data directory name": "Data Folder Naam",
   "Date": "Datum",
-  "Date is required": null,
+  "Date is required": "Datum vereist",
   "Decimal": null,
   "Decimals": null,
-  "Decompressing the database...": null,
-  "Decompressing...": null,
-  "Delete": null,
-  "Delete contact": null,
-  "Delete contact %{name}?": null,
-  "Deprecated Specification version": null,
-  "Description": null,
+  "Decompressing the database...": "De database wordt uitgepakt...",
+  "Decompressing...": "Uitpakken...",
+  "Delete": "Verwijderen",
+  "Delete contact": "Contact verwijderen",
+  "Delete contact %{name}?": "Contact %{name} verwijderen?",
+  "Deprecated Specification version": "Achterhaalde specifatie versie",
+  "Description": "Beschrijving",
   "Details": null,
   "Developer mode": "Ontwikkelaarsmodus",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "Ontwikkelingsmodus maakt geavanceerde functies mogelijk om te helpen bij ontwikkeling. Nadat u de portemonnee hebt ingeschakeld, moet deze worden gesloten en opnieuw worden geopend om deze functies in te schakelen.",
-  "Disable %{moduleName}?": null,
+  "Disable %{moduleName}?": "%{moduleName} uitschakelen?",
   "Disable staking": null,
   "Disabling Avatar will make the core use a separate change key": null,
-  "Dismiss": null,
-  "Display Test Transactions on the Transactions page": null,
-  "Display name": null,
+  "Dismiss": "Negeren",
+  "Display Test Transactions on the Transactions page": "Test transacties op de Transactiepagina weergeven",
+  "Display name": "Weergavenaam",
   "Don't show this again": null,
-  "Download Recent Database": null,
-  "Download recent database?": null,
-  "Download transactions history": null,
-  "Downloading": null,
-  "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
-  "Downloading the database": null,
-  "Drop here to install": null,
-  "Edit": null,
+  "Download Recent Database": "Recente database downloaden",
+  "Download recent database?": "Recente database downloaden?",
+  "Download transactions history": "Download transactiegeschiedenis",
+  "Downloading": "Wordt gedownload",
+  "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "Het downloaden van een recente versie van de database kan de tijd reduceren die nodig is om uw wallet te synchroniseren",
+  "Downloading the database": "Database downloaden",
+  "Drop here to install": "Sleep hier om te installeren",
+  "Edit": "Bewerken",
   "Edit contact": "Contactgegevens Bewerken",
-  "Email": null,
-  "Email address": null,
-  "Enable %{moduleName}?": null,
+  "Email": "E-mail",
+  "Email address": "E-mailadres",
+  "Enable %{moduleName}?": "%{moduleName} inschakelen?",
   "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Schakel de handmatige daemon modus in als u de daemon handmatig buiten de portemonnee uitvoert.",
   "Enable mining": "Mining inschakelen",
   "Enable staking": "Staking inschakelen",
@@ -198,7 +198,7 @@
   "Encrypt wallet": "Portemonnee Versleutelen",
   "Enter API here (ex: api/verb/noun?param=value&param2=2 or param=1 param2=2)": null,
   "Enter PIN number": null,
-  "Enter a new account name or pick an existing account:": null,
+  "Enter a new account name or pick an existing account:": "Voer een nieuwe accountnaam in of kies een bestaand account:",
   "Enter address here": "Geef adres in",
   "Enter console commands here (ex: getinfo, help)": "Geef Console Commando's Hier (vb: getinfo, help)",
   "Enter manual Core mode?": "Ga naar handmatige daemon-modus?",
@@ -206,7 +206,7 @@
   "Enter your message": "Voer uw bericht in",
   "Enter your password": null,
   "Enter your username": null,
-  "Enter your wallet password": null,
+  "Enter your wallet password": "Voer het wachtwoord van de portemonnee in",
   "Error": null,
   "Error bootstrapping recent database": null,
   "Error changing password": null,
@@ -218,44 +218,44 @@
   "Error encrypting wallet": null,
   "Error getting private key": null,
   "Error importing private key": null,
-  "Error logging in": null,
-  "Error logging out": null,
+  "Error logging in": "Fout bij aanmelden",
+  "Error logging out": "Fout bij afmelden",
   "Error migrating stake": null,
-  "Error moving NXS": null,
+  "Error moving NXS": "Fout bij verzenden van NXS",
   "Error rescanning": null,
   "Error searching for token": null,
-  "Error sending NXS": null,
+  "Error sending NXS": "Fout bij verzenden van NXS",
   "Error setting stake amount": null,
   "Execute": "Uitvoeren",
   "Exit manual Core mode?": "Sluit de handmatige daemon-modus af?",
   "Expired in": null,
   "Export contacts": "Exporteer Contactgegevens",
-  "Export custom theme": null,
-  "Fake Test Transactions": null,
+  "Export custom theme": "Exporteer aangepast thema",
+  "Fake Test Transactions": "Fictieve Test Transacties",
   "Fee": "Honorarium",
-  "File": null,
+  "File": "Bestand",
   "Foreground Color": "Tekst Kleur",
   "From": null,
   "From account": "Van Account",
-  "Generate": null,
+  "Generate": "Genereer",
   "Genesis": null,
   "Genesis transaction": "Genesis Transactie",
   "Getting next block...": "Volgende Block ophalen...",
   "Globe Arch Color": "Wereldbol Boog Kleur",
   "Globe Color": "Wereldbol Kleur",
   "Globe Pillar Color": "Wereldbol Pijler Kleur",
-  "Hash Difficulty": null,
-  "Help": null,
+  "Hash Difficulty": "Hash Moeilijkheid",
+  "Help": "Help",
   "High": "Hoog",
   "History": null,
-  "I understand the risk": null,
+  "I understand the risk": "Ik begrijp het risico",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP Adres",
   "IP address configured for manual Core.": "IP adres geconfigureerd voor handmatige daemon.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
   "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
   "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
-  "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
+  "If you need to switch back to Legacy Mode, you can select %{menu}\" menu option at any time.\"": null,
   "Ignore": "Negeren",
   "Immature": null,
   "Immature Balance": null,
@@ -264,17 +264,17 @@
   "Import custom theme": "Selecteer Thema Bestand",
   "Import private key": "Importeer Privésleutel",
   "Incoming balances": null,
-  "Install Module": null,
-  "Install it later": null,
-  "Installing Module...": null,
-  "Invalid account name": null,
+  "Install Module": "Installeer module",
+  "Install it later": "Later installeren",
+  "Installing Module...": "Module installeren...",
+  "Invalid account name": "Ongeldig account naam",
   "Invalid address": "Ongeldig Adres",
   "Invalid amount": "Ongeldig Bedrag",
-  "Invalid email": null,
-  "Invalid file format! Custom theme file must be in JSON": null,
+  "Invalid email": "Ongeldig e-mailadres",
+  "Invalid file format! Custom theme file must be in JSON": "Ongeldig bestandsformaat! Aangepast themabestand moet in JSON zijn",
   "Invalid number": null,
   "Invoice number, order number, etc... (Optional)": null,
-  "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": null,
+  "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "Het is zeer aanbevolen dat u uw portemonnee versleutelt om uw NXS veilig te houden.",
   "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "Houd Auto Update aan",
   "Keep policy on": null,
