--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -59,7 +59,7 @@
   "Available": null,
   "Available balance": null,
   "Avatar Mode": "头像模式",
-  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": "随时备份你的钱包以保证你的密码安全",
   "Background": "背景，后台。",
   "Background Color": "背景色",
   "Backing up your wallet...": "正在备份你的钱包...",
@@ -68,7 +68,7 @@
   "Backup directory": "备份目录",
   "Backup wallet": "备份钱包",
   "Balance": "余额",
-  "Base currency": null,
+  "Base currency": "基准货币",
   "Block Count": "块计数",
   "Block Weight": "块重量",
   "Block Weight depends on the time passed since you received a Trust transaction and will be reset everytime you receive a Trust transaction. Otherwise, Block Weight will reach 100% after 3 days and your Trust Score will start decaying until you receive another Trust transaction": null,
@@ -255,7 +255,7 @@
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/端口允许我自己。由 <b>分隔；</b> 。威尔德卡只在 IP 支持",
   "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
   "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
-  "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
+  "If you need to switch back to Legacy Mode, you can select %{menu}\" menu option at any time.\"": null,
   "Ignore": "忽略",
   "Immature": "未成熟",
   "Immature Balance": "不饱和余额",
@@ -275,7 +275,7 @@
   "Invalid number": null,
   "Invoice number, order number, etc... (Optional)": null,
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "非常建议您加密你的钱包，以保持你的 NXS 安全。",
-  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": "封闭的源模块隐藏起来会容易得多\n恶意代码比开源代码。 因此，万一你\n仍然想要禁用此设置，强烈建议\n您只能安装和运行您所在的闭源模块\n发展自己。",
   "Keep auto update On": "保持自动更新开启",
   "Keep policy on": "保持政策开启",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "更新你的钱包对于你的安全非常重要，并确保您获得尽可能最好的用户体验。",
@@ -344,7 +344,7 @@
   "My Addresses": "我的地址",
   "My Nexus address": "我的Nexus地址",
   "My Nexus address for %{name}": "我的 %{name} 的Nexus 地址",
-  "My address for %{name}": null,
+  "My address for %{name}": "我的地址 %{name}",
   "NXS Amount": "NXS 金额",
   "NXS addresses": "NXS 地址",
   "NXS balances": null,
@@ -461,8 +461,8 @@
   "Reference number": null,
   "Refresh": "更新",
   "Refreshing market data...": "正在刷新市场数据...",
-  "Reload": null,
-  "Reload transaction history": null,
+  "Reload": "重载",
+  "Reload transaction history": "重新加载交易记录",
   "Remove address": "删除地址",
   "Remove recipient": "移除收件人",
   "Render globe": "渲染地球",
@@ -476,7 +476,7 @@
   "Reset": "重置",
   "Restart Core for these changes to take effect": null,
   "Restart Core?": "重启核心?",
-  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": "重新启动 Nexus 核心，使用 -waretclear 参数清理并重新加载所有交易历史",
   "Restarting Core...": "重新启动核心...",
   "Restarting Nexus Core...": "重新启动 Nexus 核心...",
   "Sample Address": "示例地址",
@@ -485,7 +485,7 @@
   "Search Tokens": null,
   "Search address": "搜索地址",
   "Search contact": "搜索联系人",
-  "Search for Address": null,
+  "Search for Address": "搜索地址",
   "Search for Token on the network ( Name or Address)": null,
   "Search for token": null,
   "Security": "安全设置",
@@ -564,7 +564,7 @@
   "This is an address registered to this wallet.": "这是一个已注册到该钱包的地址。",
   "This is not one of your addresses.": "这不是您的地址之一。",
   "This is one of your addresses.": "这是你的地址之一。",
-  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": "这仅对模块开发者构成危险，可能对\n              常规用户造成危险。请确保您知道您正在做什么！",
   "This is your Default Address": "这是您的默认地址",
   "This module is developed by Nexus": "此模块由Nexus开发",
   "This repository does not exist or is private": "此存储库不存在或是私有的",
@@ -608,7 +608,7 @@
   "Unconfirmed": null,
   "Unconfirmed balance": null,
   "Unknown": "未知",
-  "Unknown error": null,
+  "Unknown error": "未知错误",
   "Unknown login status": "未知登录状态",
   "Unnamed account": null,
   "Unnamed token": null,
@@ -645,7 +645,7 @@
   "Wallet version": null,
   "Wallet will be automatically refreshed for the change to take effect": "钱包将自动刷新，以便更改生效",
   "Warning": "警告",
-  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": "警告：此模块由第三方编写，Nexus不是\n               对其质量或合法性负责。 请务必这样做\n               您在安装第三方模块和使用之前的尽职调查\n               他们有你自己的风险。",
   "Yes": "是",
   "Yes, abort": "是，中止",
   "Yes, let's bootstrap it": "是的，让我们来引导吧",
