--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -51,13 +51,13 @@
   "Are you sure you want to disable auto update?": "Oletko varma, että haluat ottaa pois päältä automaattiset päivitykset?",
   "Are you sure you want to log out?": "Oletko varma että haluat kirjautua ulos?",
   "Are you sure you want to switch to Legacy Mode?": null,
-  "Attention": null,
+  "Attention": "Huomio",
   "Author": "Tekijä",
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Automaattiset päivitykset eivät vielä ole saatavilla Macilla, päivitäthän lompakkosi manuaalisesti toistaiseksi",
   "Auto update (Recommended)": "Automaattinen päivitys (Suositeltu)",
   "Automatically check for new versions and notify if a new version is available.": "Automaattisesti tarkistaa onko uusia versioita saatavilla ja ilmoittaa kun on.",
-  "Available": null,
-  "Available balance": null,
+  "Available": "Saatavilla",
+  "Available balance": "Käytettävissä oleva saldo",
   "Avatar Mode": "Avatar Tila",
   "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": "VARMUUSKOPIOI LOMPAKKOSI USEASTI JA PIDÄ SALASANA TALLESSA.",
   "Background": "Taustakuva",
@@ -77,7 +77,7 @@
   "Bootstrap process has been aborted": "Esilataus prosessi on keskeytetty",
   "Browse": "Selaa",
   "CATEGORY": "KATEGORIA",
-  "Can not find Token": null,
+  "Can not find Token": "Tokenia ei löydy",
   "Cancel": "Peruuta",
   "Cannot bootstrap recent database in manual mode": "Tietokantaa ei voi esiladata manuaalisessa tilassa",
   "Cannot find module": "Moduulia ei löydy",
@@ -85,7 +85,7 @@
   "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "Ei voi siirtää samalle tilille",
   "Category": "Kategoria",
-  "Change": null,
+  "Change": "Muuta",
   "Change password": "Vaihda salasana",
   "Check for Updates...": "Tarkista päivitykset...",
   "Check wallet": "Tarkista lompakko",
@@ -96,7 +96,7 @@
   "Checking module": "Tarkistetaan moduuli",
   "Checking sync status": "Tarkistetaan synkronoinnin tilaa",
   "Choose your Nexus Address display preference": "Valitse Nexus Osoitteesi esillepanon preferenssi",
-  "Clear": null,
+  "Clear": "Tyhjennä",
   "Clear all stored peer connections and restart Nexus": null,
   "Clear console": "Tyhjennä konsoli",
   "Clear peer connections": null,
@@ -109,7 +109,7 @@
   "Color scheme": "Väriteema",
   "Color scheme has been reset to default": "Valinnat päivitetty oletukseksi",
   "Confirm": "Vahvista",
-  "Confirm PIN": null,
+  "Confirm PIN": "Vahvista PIN",
   "Confirm password": "Vahvista salasana",
   "Confirmations": "Vahvistuksia",
   "Connecting to Nexus Core": "Yhdistetään Nexus Ytimeen",
