--- a/assets/translations/ro.json
+++ b/assets/translations/ro.json
@@ -71,7 +71,7 @@
   "Base currency": "Valută de bază",
   "Block Count": "Număr bloc",
   "Block Weight": "Greutate bloc",
-  "Block Weight depends on the time passed since you received a Trust transaction and will be reset everytime you receive a Trust transaction. Otherwise, Block Weight will reach 100% after 3 days and your Trust Score will start decaying until you receive another Trust transaction": null,
+  "Block Weight depends on the time passed since you received a Trust transaction and will be reset everytime you receive a Trust transaction. Otherwise, Block Weight will reach 100% after 3 days and your Trust Score will start decaying until you receive another Trust transaction": "Indicatorul Greutate Bloc este influenţat de timpul scurs între Tranzacţiile de Încredere şi se va reseta atunci când minezi/validezi o astfel de tranzacţie. În caz contrar, incicatorul Greutate Bloc va ajunge la 100% după 3 zile iar scorul tău de încredere va începe să scadă până când vei primi o nouă Tranzacţie de Încredere",
   "Block hash": "Hash bloc",
   "Bootstrap Recent Database": "Încărcare \"bootstrap\" bază de date recentă",
   "Bootstrap process has been aborted": "Procesul de încărcare \"bootstrap\" a fost anulat",
@@ -82,7 +82,7 @@
   "Cannot bootstrap recent database in manual mode": "Baza de date recentă nu se poate încărca \"bootstrap\" în modul manual",
   "Cannot find module": "Modulul nu poate fi găsit",
   "Cannot install from that location": "Nu se poate instala din locaţia aleasă",
-  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": "Nu se poate migra cota parte deoarece acest utilizator Tritium a mai iniţiat procesul de cotă parte în trecut. Te rugăm creează un nou cont de utilizator dacă doreşti să transferi cota parte.",
   "Cannot move to the same account": "Nu se poate muta în acelaşi cont",
   "Category": "Categorie",
   "Change": "Modifică",
@@ -254,7 +254,7 @@
   "IP address configured for manual Core.": "Adresa IP a fost configurată pentru Nucleu în mod manual.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP-urile/Port-urile cu permisiune de minat la. Separate cu <b>;</b> . Wildcards suportate doar în IP",
   "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": "Dacă ai avut o cotă parte folosind contul tău \"legacy\"(clasic), apasă butonul Migrare de mai jos pentru a muta atât cota parte cât şi scorul de încredere în acest cont de utilizator nou Tritium.",
-  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": "Daca nu ai iniţiat niciodată procesul de cotă parte sau ai transferat deja cota parte, îţi poţi trimite manual fondurile din contul legacy/clasic în noul cont Tritium.",
   "If you need to switch back to Legacy Mode, you can select %{menu}\" menu option at any time.\"": "Dacă ai nevoie să revii la Modul Legacy, poţi selecta meniul %{menu}\" oricând.\"",
   "Ignore": "Ignoră",
   "Immature": "Nematurizat",
@@ -275,7 +275,7 @@
   "Invalid number": "Număr incorect",
   "Invoice number, order number, etc... (Optional)": "Număr factură, număr comandă, etc...(Opţional)",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "Este crucială criptarea portofelului tău pentru a îţi păstra monedele NEXUS în siguranţă.",
-  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": "Este mult mai uşor ca un modul cu sursă închisă să ascundă\n              coduri maliţioase faţă de unul cu sursă deschisă. Astfel, în cazul în care\n              doreşti în continuare să dezactivezi această setare, este recomandat să\n              instalezi şi să rulezi doar modulele cu sursă închisă \n              dezvoltate de tine.",
   "Keep auto update On": "Păstrează actualizarea automată activă",
   "Keep policy on": "Păstrează politica activă",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Păstrarea portofelului actualizat este foarte importantă pentru securitate și pentru ca tu să te bucuri de cea mai bună experiență de utilizare.",
@@ -389,7 +389,7 @@
   "Not logged in": "Nu ești autentificat(ă)",
   "Not provided": "Nu a fost furnizat",
   "Not staking": "Nu este activată cota parte",
-  "Note: This change will not take effect immediately but will stay pending until you get the next Trust transaction. The pending change will be recorded locally in this machine, therefore if you switch to another machine for staking, the change will not take effect.": null,
+  "Note: This change will not take effect immediately but will stay pending until you get the next Trust transaction. The pending change will be recorded locally in this machine, therefore if you switch to another machine for staking, the change will not take effect.": "Notă: Această modificare nu se va activa automat, însă, va sta în așteptare până vei primi următoarea Tranzacție de Încredere. Modificarea în așteptare va fi înregistrată local pe acest computer, astfel ca dacă vei schimba terminalul pentru a iniția procesul de cotă parte, modificarea nu va avea loc.",
   "Notes": "Note",
   "Number is too large": "Numărul este prea lung",
   "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing": "Doar modulele cu o politică \"open source\" se pot descărca și rula. Poți dezactiva această opțiune pentru a testa modulele dezvoltate de tine",
@@ -427,8 +427,8 @@
   "Phone Number": "Număr de telefon",
   "Phone number": "Număr de telefon",
   "Pin must be at least 4 characters": "Codul Pin trebuie să aibă cel puțin 4 caractere",
-  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
-  "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": "Te rugăm să ai în vedere faptul că îți poți pierde scorul de încredere legacy/clasic dacă transferi NXS manual din contul legacy fără să îți fi migrat mai întâi cota parte",
+  "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": "Te rugăm să te asiguri că foloseşti acelaşi computer pe care l-ai folosit atunci când ai iniţiat procesul de cotă parte cu portofelul tău legacy/clasic, sau că ai plasat fisierul wallet.dat în %{path}",
   "Please wait for Nexus Core to start.": "Te rugăm așteaptă pornirea Nucleului Nexus.",
   "Please wait, this may take up to 30 seconds": "Te rugăm aşteaptă, operaţiunea poate dura până la 30 de secunde",
   "Port": "Port",
@@ -519,12 +519,12 @@
   "Stake Difficulty": "Dificultate miză",
   "Stake Rate": "Rată miză",
   "Stake Weight": "Greutate miză",
-  "Stake Weight depends on Trust Weight and Block Weight. Along with your Stake balance, Stake Weight affects how frequent you receive a Trust transaction": null,
+  "Stake Weight depends on Trust Weight and Block Weight. Along with your Stake balance, Stake Weight affects how frequent you receive a Trust transaction": "Indicatorul Greutate Cotă Parte depinde de indicatorii Greutate Încredere şi Greutate Bloc. Împreună cu soldul tău Cotă Parte, indicatorul Greutate Cotă Parte determină cât de des primeşti o Tranzacţie de Încredere",
   "Stake amount": "Sumă miză",
   "Stake amount has been updated": "Suma cotă parte a fost actualizată",
   "Stake balance": "Sold cotă parte",
   "Staking": "Cota parte este activă",
-  "Staking and mining rewards that need to get past 120 block-old to become available": null,
+  "Staking and mining rewards that need to get past 120 block-old to become available": "Recompensele pentru minat și cotă parte trebuie să treacă de 120 de blocuri pentru a deveni disponibile",
   "Start Nexus Core": "Pornește Nucleul Nexus",
   "Status": "Status",
   "Stop Nexus Core": "Oprește Nucleul Nexus",
@@ -542,25 +542,25 @@
   "That's Ok": "Este în regulă",
   "The amount of NXS currently staked in the trust account": "Cantitatea de NXS cotă parte în mod curent în contul de încredere",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": "Este posibil ca soldul afişat să nu fie actualizat din moment ce portofelul nu este încă sincronizat complet",
-  "The current NXS balance of the trust account that is not staked. You can spend this amount without affecting your Trust Score": null,
+  "The current NXS balance of the trust account that is not staked. You can spend this amount without affecting your Trust Score": "Soldul NXS actual pentru Contul de Încredere care nu participă la cota parte. Poți cheltui această sumă fără să îți afectezi Scorul de Încredere",
   "The current annual reward rate earned for staking": "Rata recompensei anuale alocată pentru cota parte",
-  "The current balance across all NXS accounts that is available to be spent": null,
-  "The pending stake amount change that will be applied on the next Trust transaction": null,
-  "The percentage of the maximum Trust Score, which is gradually built over time when you consistently operate your node in an honest, trustworthy, and timely manner": null,
+  "The current balance across all NXS accounts that is available to be spent": "Soldul actual din toate conturile NXS disponibil pentru a fi cheltuit",
+  "The pending stake amount change that will be applied on the next Trust transaction": "Suma cotei parte în așteptare ce va fi aplicată la următoarea Tranzacție de Încredere",
+  "The percentage of the maximum Trust Score, which is gradually built over time when you consistently operate your node in an honest, trustworthy, and timely manner": "Procentajul maxim al Scorului de Încredere care creşte gradual, în timp, atunci când operezi un nod în mod continuu, onest, de încredere şi la timp",
   "The provided repository is not verified to be the real source code of this module": "Depozitul furnizat nu este verificat ca fiind sursa reală de cod pentru acest modul",
-  "The sum of all coinbase transactions that have not yet reached maturity": null,
-  "The sum of all debit and coinbase transactions made to your NXS accounts that are confirmed but have not yet been credited. This does NOT include immature and unconfirmed amounts": null,
-  "The sum of all debit transactions made to your NXS accounts that are not confirmed, or credits you have made to your accounts that are not yet confirmed (not yet included in a block)": null,
-  "The wallet will now be refreshed for the new module to take effect": null,
+  "The sum of all coinbase transactions that have not yet reached maturity": "Suma tuturor monedelor câştigate indisponibile momentan pentru ca nu au ajuns încă la maturitate",
+  "The sum of all debit and coinbase transactions made to your NXS accounts that are confirmed but have not yet been credited. This does NOT include immature and unconfirmed amounts": "Suma tuturor tranzacţiilor de debit şi a monedelor câştigate alocate conturilor tale NXS care sunt confirmate dar nu au fost creditate încă. Acestea NU includ sumele imature sau neconfirmate",
+  "The sum of all debit transactions made to your NXS accounts that are not confirmed, or credits you have made to your accounts that are not yet confirmed (not yet included in a block)": "Suma tuturor tranzacţiilor de debit către conturile tale NXS care nu sunt confirmate, sau a creditelor încă neconfirmate, (care nu au fost încă adăugate într-un bloc) pe care le-ai realizat către conturile tale",
+  "The wallet will now be refreshed for the new module to take effect": "Portofelul se va reactualiza pentru ca noul modul să se activeze",
   "Their Nexus address": "Adresele lor Nexus",
   "Theme": "Temă",
   "Theme exported": "Temă exportată",
   "Theme has been reset to default": "Tema a fost resetată",
   "There are currently no updates available": "În acest moment nu există actualizări disponibile",
-  "There is a %{tokenfee}NXS token creation fee, based on supply": null,
+  "There is a %{tokenfee}NXS token creation fee, based on supply": "Există o taxă de %{tokenfee}NXS pentru crearea de monede, în funcţie de rezervă",
   "There must be at least one address.": "Este necesară cel puțin o adresă.",
   "There must be at least one recipient": "Este necesar cel puțin un destinatar",
-  "This includes your pending balance, unconfirmed balance and immature balance": null,
+  "This includes your pending balance, unconfirmed balance and immature balance": "Aceasta include soldurile tale în așteptare, neconfirmate sau imature",
   "This is an address registered to this wallet.": "Aceasta este o adresă înregistrată la acest portofel.",
   "This is not one of your addresses.": "Aceasta este una dintre adresele tale.",
   "This is one of your addresses.": "Aceasta este una dintre adresele tale.",
@@ -569,7 +569,7 @@
   "This module is developed by Nexus": "Acest modul este dezvoltat de Nexus",
   "This repository does not exist or is private": "Acest depozit nu există sau este privat",
   "This repository is not verified to be the real source code of this module": "Acest depozit nu este verificat ca fiind sursa reală de cod pentru acest modul",
-  "This will transfer all stake amount and trust score from your legacy wallet to your new Tritium account.": null,
+  "This will transfer all stake amount and trust score from your legacy wallet to your new Tritium account.": "Această opțiune va transfera toată suma cotei parte precum și scorul de încredere din portofelul legacy/clasic în noul tău cont Tritium.",
   "Time": "Timp",
   "Time is required": "Timp necesar",
   "Time must be at least one hour in the future": "Timpul trebuie setat cu cel puțin o oră în viitor",
@@ -595,7 +595,7 @@
   "Transactions Details": "Detalii tranzacții",
   "Transactions chart": "Tabel tranzacții",
   "Tritium Mode": "Mod Tritium",
-  "Tritium Mode is currently in early development, therefore not all Tritium features are supported by the user interface. If you want to access a Tritium feature that hasn't had a user interface yet, you can go to Console/Tritium Console, or use any HTTP client to call Nexus APIs directly.": null,
+  "Tritium Mode is currently in early development, therefore not all Tritium features are supported by the user interface. If you want to access a Tritium feature that hasn't had a user interface yet, you can go to Console/Tritium Console, or use any HTTP client to call Nexus APIs directly.": "Modul Tritium este încă în stadiul incipient de dezvoltare, astfel că interfaţa de utilizare nu suportă momentan toate funcţiile Tritium. Dacă doreşti să accesezi o functie Tritium care nu este prezentă încă în interfaţă poţi utiliza Consola/Consola Tritium sau poţi folosi orice alt client HTTP pentru a accesa direct API-ul Nexus.",
   "Trust": "Acreditare",
   "Trust Weight": "Greutate acreditare",
   "Trust transaction": "Tranzacție de acreditare",
@@ -633,7 +633,7 @@
   "Visit repository": "Vizitează depozitul de informație",
   "Volume": "Volum",
   "Waiting for 100% synchronization to start staking...": "Se asteaptă sincronizarea 100% pentru a începe procesul de miză...",
-  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": "Vârsta soldului trebuie să depăşească 72 de ore pentru a se iniţia procesul de cotă parte...",
   "Wallet backed up": "S-a creat copie de rezervă",
   "Wallet build date": "Dată versiune portofel",
   "Wallet has been backed up": "S-a creat copie de rezervă portofel",
